--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,3 +1,8 @@
+
+
+/*   background: url(../assets/yay.jpg) no-repeat center 0;  */
+
+
 #orders_statistical_chart,
 #membership_statistical_chart{
      width: 100%;
