--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,3 +1,32 @@
 .app_Layout{
      width: 100%;
 }
+
+
+#user-info-block{
+      width: 100%; 
+      text-align: right;
+      padding-right: 60px;
+}
+
+.user-dropdown-name{
+      font-size: 12px;
+}
+
+#user-info-block .ant-avatar-image{
+      margin-right: 10px;
+}
+
+
+#app-header-trigger-icon,
+#app-header-reload-icon{
+       font-weight: bolder;
+       font-size: 20px;
+       cursor: pointer;
+       margin: 0 16px;
+}
+
+
+#app-header-reload-icon{
+       margin: 0 20px;
+}
