开发登录逻辑

--- a/src/components/widgets/widgets.less
+++ b/src/components/widgets/widgets.less
@@ -12,3 +12,12 @@
      height: 25px;
      border: 1px solid red;;
 }
+
+#app-captcha-box{
+      float: right;
+       width: 150px;
+       height: 39px;
+       overflow: hidden;
+       border: 1px solid #f1f1f1;
+       cursor: pointer;
+}
