--- a/src/components/widgets/widgets.less
+++ b/src/components/widgets/widgets.less
@@ -21,3 +21,10 @@
        border: 1px solid #f1f1f1;
        cursor: pointer;
 }
+
+.app-countdown-box{
+      display: inline-block;
+      line-height: 39px;
+      padding: 0 5px;
+      color: #c8c8c8;
+}
