--- a/src/layouts/login/login.less
+++ b/src/layouts/login/login.less
@@ -7,11 +7,12 @@
 
 .app-login-form{
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 50%;
     width: 400px;
     padding: 10px 40px 0;
     margin-left: -200px;
+    margin-top: -187px;
     background-color: #FFF;
     box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     border-radius: 5px;
