--- a/src/pages/goods/goods.less
+++ b/src/pages/goods/goods.less
@@ -24,10 +24,25 @@
      background-color: #40a9ff;
 }
 
-
-
 .edit-attrs-plugs-button i{
      position: relative;
      top: 5px;
 }
+
+
+.goods-img-uploader .ant-upload {
+     width: 100px;
+     height: 100px;
+   }
+
+
+
+   .goods-img-uploader  .goods-img-box{
+          position: relative;
+          width: 100%;
+   }
+
+.goods-img-uploader  .goods-img-box img{
+          width: 100%;
+   }  
 
