--- a/src/global.css
+++ b/src/global.css
@@ -67,7 +67,7 @@ button{
 
 
 .bd{
-   border: 1px solid red;
+   border: 1px solid  #eb3232;
 }
 
 
@@ -96,8 +96,12 @@ button{
      display: inline-block;
      border: none;
      background-color: transparent;
-     margin: 5px;
+     margin: 3px;
      cursor: pointer;
+}
+
+.table-action-buttons button:hover{
+  color:  #eb3232;
 }
 
 .expanded-row{
@@ -110,7 +114,7 @@ button{
    position: absolute;
    top: -9px;
    left: -12px;
-   color: red;
+   color:  #eb3232;
    z-index: 10;
    font-size: 20px;
    height: 15px;
@@ -155,9 +159,15 @@ button{
 
 
 
+.upload-image-list{
+    width: 100%;
+    border: 1px solid red;
+}
+
 
 .upload-image-box{
     position: relative;
+    display: inline-block;
     width: 100%;
     height: 100%;
     overflow: hidden;
